# OpenClaw_Bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SESSION-NOTES.md  pyproject.toml
brains/clu/: pyproject.toml
brains/clu/src/clu/: __init__.py  __main__.py  config.py  context.py  main.py  state.py
brains/clu/src/clu/handlers/: __init__.py  imessage_received.py
brains/clu/tests/: test_clu_handler.py  test_clu_main.py  test_clu_state.py
brains/shared/: pyproject.toml
brains/shared/src/brains_shared/: __init__.py  agent.py  client.py  eventbus.py  events.py  imessage.py  llm.py  obsidian.py
brains/shared/src/brains_shared/_generated/: __init__.py
brains/shared/src/brains_shared/_generated/api/agent/: create_draft_v1_agent_drafts_post.py  get_draft_v1_agent_drafts_draft_id_get.py  list_drafts_v1_agent_drafts_get.py  patch_draft_v1_agent_drafts_draft_id_patch.py
brains/shared/src/brains_shared/_generated/api/auth/: whoami_v1_auth_whoami_get.py
brains/shared/src/brains_shared/_generated/api/calendar/: create_event_v1_calendar_events_post.py  delete_event_v1_calendar_events_event_id_delete.py  list_events_v1_calendar_events_get.py  update_event_v1_calendar_events_event_id_patch.py
brains/shared/src/brains_shared/_generated/api/contacts/: search_contacts_v1_contacts_search_get.py
brains/shared/src/brains_shared/_generated/api/email/: get_thread_v1_email_threads_thread_id_get.py  list_threads_v1_email_threads_get.py  send_email_v1_email_send_post.py
brains/shared/src/brains_shared/_generated/api/events/: events_publish_v1_events_publish_post.py
brains/shared/src/brains_shared/_generated/api/health/: health_v1_health_get.py
brains/shared/src/brains_shared/_generated/api/imessage/: imessage_inbound_v1_imessage_inbound_post.py  imessage_outbox_v1_imessage_outbox_get.py  imessage_send_v1_imessage_send_post.py  imessage_sent_v1_imessage_sent_post.py
brains/shared/src/brains_shared/_generated/api/llm/: llm_complete_v1_llm_complete_post.py
brains/shared/src/brains_shared/_generated/api/reminders/: create_reminder_v1_reminders_post.py  delete_reminder_v1_reminders_reminder_id_delete.py  list_reminders_v1_reminders_get.py  update_reminder_v1_reminders_reminder_id_patch.py
brains/shared/src/brains_shared/_generated/api/vault/: vault_read_v1_vault_read_get.py  (+1 more)
brains/shared/src/brains_shared/_generated/models/: __init__.py  calendar_create_request.py  calendar_list_response.py  calendar_update_request.py  contact_out.py  contacts_search_response.py  delete_event_v1_calendar_events_event_id_delete_response_delete_event_v1_calendar_events_event_id_delete.py  delete_reminder_v1_reminders_reminder_id_delete_response_delete_reminder_v1_reminders_reminder_id_delete.py  deps.py  deps_agent_db.py  deps_apple_bridge.py  deps_idempotency_db.py  deps_imap_glysk.py  deps_imap_lopes.py  deps_imap_whilesum.py  deps_keychain.py  deps_openrouter.py  deps_redis.py  deps_telemetry_db.py  deps_vault.py  draft_create_request.py  draft_create_request_agent.py  draft_create_request_channel.py  draft_list_response.py  draft_out.py  draft_patch_request.py  draft_patch_request_status_type_0.py  email_send_request.py  email_send_request_account.py  email_thread_detail_response.py  email_threads_list_response.py  event_out.py  event_publish_request.py  event_publish_request_payload.py  event_publish_response.py  health_response.py  health_response_status.py  i_message_inbound_request.py  i_message_inbound_request_agent.py  i_message_inbound_response.py  (+32 more)
brains/shared/tests/: test_brains_agent.py  test_brains_client.py  test_brains_eventbus.py  test_brains_events.py  test_brains_imessage.py  test_brains_llm.py  test_brains_obsidian.py
bridge/: pyproject.toml
bridge/src/bridge/: __init__.py  __main__.py  auth.py  config.py  errors.py  idempotency.py  keychain.py  logging_setup.py  main.py  middleware.py  ratelimit.py  supervisor.py  telemetry.py
bridge/src/bridge/eventbus/: __init__.py  publisher.py  subscriber.py
bridge/src/bridge/migrations/: __init__.py  agent_0001_init.sql  idempotency_0001_init.sql  telemetry_0001_init.sql
bridge/src/bridge/providers/: __init__.py  vault.py
bridge/src/bridge/providers/apple/: __init__.py  calendar.py  contacts.py  reminders.py  runner.py
bridge/src/bridge/providers/email/: __init__.py  config.py  imap.py  models.py  parsing.py  smtp.py  threading.py
bridge/src/bridge/providers/llm/: __init__.py  base.py  openrouter.py  pricing.py  router.py
bridge/src/bridge/routes/: __init__.py  agent.py  auth.py  calendar.py  contacts.py  email.py  events.py  health.py  imessage.py  llm.py  reminders.py  vault.py
bridge/tests/: README.md  _support.py  conftest.py
bridge/tests/fixtures/apple/calendar/: create_returns_id.txt  list_two_events.tsv
bridge/tests/fixtures/apple/contacts/: search_two_results.tsv
bridge/tests/fixtures/apple/reminders/: create_returns_id.txt  list_two_reminders.tsv
bridge/tests/unit/: test_agent_routes.py  test_apple_calendar.py  test_apple_calendar_routes.py  test_apple_contacts.py  test_apple_contacts_routes.py  test_apple_reminders.py  test_apple_reminders_routes.py  test_apple_runner.py  test_apple_runner_integration.py  test_auth.py  test_auth_legacy_fallback.py  test_brain_drafts_cli.py  test_clu_drafts_cli.py  test_email_config.py  test_email_imap.py  test_email_parsing.py  test_email_routes.py  test_email_smtp.py  test_email_threading.py  test_errors.py  test_eventbus.py  test_events_route.py  test_health.py  test_idempotency.py  test_imessage_routes.py  test_keychain.py  test_llm_openrouter.py  test_llm_route.py  test_llm_router.py  test_pricing.py  test_ratelimit.py  test_request_id.py  test_supervisor.py  test_system_events.py  test_telemetry.py  test_vault_provider.py  test_vault_routes.py
relays/imessage/: pyproject.toml
relays/imessage/src/relay/: __init__.py  bridge_client.py  chatdb.py  config.py  keychain_reader.py  launcher.py  main.py  osascript.py
relays/imessage/tests/: test_bridge_client.py  test_chatdb.py  test_config.py  test_main.py  test_osascript.py
(+68 files in other folders)
