[project]
name = "openclaw"
version = "0.0.0"
description = "OpenClaw monorepo workspace root."
requires-python = ">=3.13,<3.14"

# The root is a virtual package — it pulls in every workspace member so
# `uv sync` installs the full dev environment with one command.
dependencies = [
    "openclaw-bridge",
    "openclaw-relay-imessage",
    "openclaw-brains-shared",
    "openclaw-brain-clu",
]

[tool.uv.workspace]
members = [
    "bridge",
    "relays/imessage",
    "brains/shared",
    "brains/clu",
]

[tool.uv.sources]
openclaw-bridge = { workspace = true }
openclaw-relay-imessage = { workspace = true }
openclaw-brains-shared = { workspace = true }
openclaw-brain-clu = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
    # Hermetic Redis for tests — supports pubsub and the EVAL-based rate
    # limiter Lua script via the [lua] extra (lupa).
    "fakeredis[lua]>=2.20",
    # SDK regeneration. Generated output is committed into
    # `brains/shared/src/brains_shared/_generated/`; this dep exists only
    # so `tools/regen-sdk.sh` works on the dev box.
    "openapi-python-client>=0.21",
    # PyYAML is a transitive of `python-frontmatter` already; declare it
    # explicitly here because `tools/dump-openapi.py` is a dev-only tool
    # that needs the import at build-time, not run-time.
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "docs",
    ".venv",
    # Generated SDK output (re-rendered by tools/regen-sdk.sh). Linting
    # generated code adds churn without value; mypy --strict still
    # checks the generated tree for type-correctness.
    "brains/shared/src/brains_shared/_generated",
]

[tool.ruff.lint]
# Pragmatic, opinionated baseline. Tighten as we grow.
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "ANN",          # missing type annotations (CLAUDE.md: type-annotate everything)
    "ASYNC",        # async correctness
    "S",            # bandit
    "BLE",          # blind except (CLAUDE.md: no bare except)
    "T20",          # no print (CLAUDE.md: structured JSON logs only)
    "RET",          # return value sanity
    "SIM",          # simplifications
    "TID",          # tidy imports — used to enforce package boundaries
]
ignore = [
    "ANN401",  # allow Any in type annotations (used sparingly)
    "S101",    # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ANN", "S105", "S106", "PLC0415"]
# CLI scripts emit human output; print() is the right primitive there.
"scripts/**" = ["T201"]

# Package-boundary enforcement is done via the `scripts/check-boundaries.sh`
# CI step rather than ruff's banned-api (which can't express directory-scoped
# allow-lists). See `docs/repo-layout.md` for the rules.

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = [
    "bridge/src",
    "brains/shared/src",
]

[[tool.mypy.overrides]]
module = ["bridge.tests.*", "brains_shared.tests.*"]
disallow_untyped_defs = false

# python-frontmatter ships no py.typed marker (last release 1.1, 2024).
# Treat its public surface as `Any` rather than retrofitting stubs upstream.
[[tool.mypy.overrides]]
module = ["frontmatter", "frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
# Workaround for uv 0.11.x + Python 3.13: uv flags `.pth` files in the venv
# as macOS `UF_HIDDEN`, and Python 3.13's `site.py` skips hidden `.pth` files,
# so editable workspace installs are not on `sys.path`. Until uv ships a fix,
# point pytest at the source dirs explicitly. Production uvicorn invocations
# set PYTHONPATH the same way (see `scripts/run-bridge.sh`).
pythonpath = [
    "bridge/src",
    "bridge/tests",
    "brains/shared/src",
    "brains/clu/src",
    "relays/imessage/src",
]
testpaths = [
    "bridge/tests",
    "relays/imessage/tests",
    "brains/shared/tests",
    "brains/clu/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # pytest-asyncio 1.3.0 + Python 3.13 leaks an event loop / self-pipe
    # socket inside its `_temporary_event_loop_policy` setup. The
    # ResourceWarning surfaces through pytest's unraisable plugin and
    # would otherwise mark the next async-fixture test as ERROR. Not our
    # code; ignore until pytest-asyncio ships a fix.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
