[project]
name = "openclaw-bridge"
version = "0.1.0"
description = "OpenClaw bridge — FastAPI HTTP API mediating Apple, email, vault, LLM, and Redis."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "keyring>=25.5",
    "python-frontmatter>=1.1",
    "httpx>=0.28",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "bridge"
