[project]
name = "openclaw-brain-clu"
version = "0.1.0"
description = "CLU brain — first event subscriber, triage + draft loop on imessage.received.clu."
requires-python = ">=3.13,<3.14"
dependencies = [
    "openclaw-brains-shared",
]

[tool.uv.sources]
openclaw-brains-shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "clu"
