[project]
name = "openclaw-brains-shared"
version = "0.0.0"
description = "OpenClaw shared brain SDK (placeholder — generated at build step 8)."
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "brains_shared"
