[project]
name = "openclaw-relay-imessage"
version = "0.0.0"
description = "OpenClaw iMessage relay (placeholder — implemented at build step 7)."
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "relay"
